Fix Spacing around Price/Cart Box

--- a/theme/templates/sese-bootstrap/sass/sese.sass
+++ b/theme/templates/sese-bootstrap/sass/sese.sass
@@ -325,9 +325,13 @@ small.item-number
 #productGeneral .page-header h1 img
   margin-left: 0.2em
 
+/* Fix Spacing Around Price/Cart Box */
+#productGeneral h4
+  margin-top: 0
+
 /* Ensure number in Quantity input can always be seen */
 #productGeneral #cart-add .input-group
-  min-width: 9.5em
+  width: 90px
 
 /* Fix extra spacing when Product-in-Cart text is shown */
 #productGeneral #cart-add #in-cart-text
